Manage clamd process with daemon
The clamd process can crash quite often. This managed the process with
daemon to restart it automatically.

See:
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=250008

--- a/files/etc/clamd.conf
+++ b/files/etc/clamd.conf
@@ -4,6 +4,7 @@ LogTime yes
 LogSyslog yes
 LogVerbose yes
 ExtendedDetectionInfo yes
+Foreground yes
 TCPSocket 3310
 TCPAddr 127.0.0.1
 MaxConnectionQueueLength 50
